# erp_next_mailing_service

./: README.md  pyproject.toml
mailing_service/: hooks.py  modules.txt
mailing_service/mailing_service/doctype/generate_mail/: generate_mail.js  generate_mail.json  generate_mail.py  test_generate_mail.py
mailing_service/mailing_service/doctype/generate_pdf/: generate_pdf.js  generate_pdf.json  generate_pdf.py  test_generate_pdf.py
mailing_service/mailing_service/doctype/mail_template/: mail_template.js  mail_template.json  mail_template.py  test_mail_template.py
mailing_service/mailing_service/doctype/pdf_template/: pdf_template.js  pdf_template.json  pdf_template.py  test_pdf_template.py
